@@ -43,12 +43,12 @@ public class Modeler implements EntryPoint {
     * Inits the application, hide the loading image and message.
     * Display the application view.
     */
-   private void init() {
-      DOM.setStyleAttribute(RootPanel.get("loading-cont").getElement(), "display", "none");
-      
+   private void init() {      
       EventBus eventBus = new SimpleEventBus();
       ApplicationView appView = new ApplicationView(eventBus);
       appView.initialize();
+      
+      DOM.setStyleAttribute(RootPanel.get("loading-cont").getElement(), "display", "none");
    }
 
 }
