@@ -233,73 +233,22 @@ public class ProfilePanelPresenter implements Presenter {
   private void initTreeWithAutoSavedPanels() {
     final TreePanel<BeanModel> panelTree = this.view.getPanelTree();
 
-    UtilsProxy.loadPanelsFromSession(new AsyncSuccessCallback<Collection<Panel>>() {
-       @Override
-       public void onSuccess(Collection<Panel> panels) {
-          if (panels.size() > 0) {
-             initModelDataBase(panels);
-             panelTree.getStore().removeAll();
-             new PanelTreeStoreChangeListener(panelTree);
-             for (Panel panel : panels) {
-                BeanModel panelBeanModel = panel.getBeanModel();
-                panelTree.getStore().add(panelBeanModel, false);
-                for (GroupRef groupRef : panel.getGroupRefs()) {
-                   panelTree.getStore().add(panelBeanModel, groupRef.getBeanModel(), false);
-                   for (ScreenPairRef screenRef : groupRef.getGroup().getScreenRefs()) {
-                      panelTree.getStore().add(groupRef.getBeanModel(), screenRef.getBeanModel(), false);
-                   }
-                }
-             }
-             panelTree.expandAll();
-             eventBus.fireEvent(new ScreenTableLoadedEvent());
-          } else {
-             panelTree.unmask();
-          }
-          UtilsProxy.loadMaxID(new AsyncSuccessCallback<Long>() {
-             @Override
-             public void onSuccess(Long maxID) {
-                if (maxID > 0) {              // set the layout component's max id after refresh page.
-                   IDUtil.setCurrentID(maxID.longValue());
-                }
-                ProfilePanelPresenter.this.view.setInitialized(true);
-             }
-             
-          });
-       }
-       @Override
-       public void onFailure(Throwable caught) {
-          if (caught instanceof UIRestoreException) {
-            ProfilePanelPresenter.this.view.setInitialized(true);
-          }
-          panelTree.unmask();
-          super.onFailure(caught);
-          super.checkTimeout(caught);
-       }
-
-       private void initModelDataBase(Collection<Panel> panels) {
-          BeanModelDataBase.panelTable.clear();
-          BeanModelDataBase.groupTable.clear();
-          BeanModelDataBase.screenTable.clear();
-          Set<Group> groups = new LinkedHashSet<Group>();
-          Set<ScreenPair> screens = new LinkedHashSet<ScreenPair>();
-          for (Panel panel : panels) {
-             List<GroupRef> groupRefs = panel.getGroupRefs();
-             for (GroupRef groupRef : groupRefs) {
-                groups.add(groupRef.getGroup());
-             }
-             BeanModelDataBase.panelTable.insert(panel.getBeanModel());
-          }
-          
-          for (Group group : groups) {
-             List<ScreenPairRef> screenRefs = group.getScreenRefs();
-             for (ScreenPairRef screenRef : screenRefs) {
-                screens.add(screenRef.getScreen());
-                BeanModelDataBase.screenTable.insert(screenRef.getScreen().getBeanModel());
-             }
-             BeanModelDataBase.groupTable.insert(group.getBeanModel());
-          }
-       }
-    });
+      panelTree.getStore().removeAll();
+      new PanelTreeStoreChangeListener(panelTree);
+      List<BeanModel> panels = BeanModelDataBase.panelTable.loadAll();
+      for (BeanModel panelBean : panels) {
+        Panel panel = panelBean.getBean();
+         BeanModel panelBeanModel = panel.getBeanModel();
+         panelTree.getStore().add(panelBeanModel, false);
+         for (GroupRef groupRef : panel.getGroupRefs()) {
+            panelTree.getStore().add(panelBeanModel, groupRef.getBeanModel(), false);
+            for (ScreenPairRef screenRef : groupRef.getGroup().getScreenRefs()) {
+               panelTree.getStore().add(groupRef.getBeanModel(), screenRef.getBeanModel(), false);
+            }
+         }
+      }
+      panelTree.expandAll();
+      eventBus.fireEvent(new ScreenTableLoadedEvent());
     
  }
 }
